<resources>
    <string name="app_name">Solidity TicTacToe</string>
    <string name="join">Join</string>
    <string name="open_game">View Game</string>
    <string name="enter_game_id">Enter Game ID</string>
    <string name="waiting_for_player">Waiting for player to join</string>
    <string name="player_x_turn">Player %ss turn</string>
    <string name="player_x_won">Player %s won the game</string>
    <string name="game_over_tie">Game ended in a Tie</string>
    <string name="last_move_at">Last move at: %s</string>
    <string name="setup_account">Setup Account</string>
    <string name="finish">Finish</string>
    <string name="enter_mnemonic">Enter Mnemonic</string>
    <string name="generate_mnemonic">Generate Mnemonic</string>
    <string name="error_unknown">Unknown error occurred. Try again!</string>
    <string name="error_mnemonic_unknown">Invalid mnemonic!</string>
    <string name="error_mnemonic_wrong_word">Not all words are part of the same wordlist!</string>
    <string name="error_mnemonic_empty">Please enter a mnemonic phrase!</string>
    <string name="unlock">Unlock</string>
    <string name="enter_password">Enter Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="invalid_credentials">Invalid credentials provided!</string>
    <string name="game_x">Game %s</string>
    <string name="unlock_screen_title">Unlock Solidity TicTacToe</string>
    <string name="error_game_info">Game info not available</string>
    <string name="error_game_info_will_retry">Could not retrieve game info. Will automatically retry after 10 sec!</string>
    <string name="not_player_of_game">You are not part of this game</string>
    <string name="you_are_player_x">You are Player %s</string>
    <string name="setup_account_game">Setup account to join game</string>
    <string name="game_not_started">Game has not yet started!</string>
    <string name="joining_game">Joining Game!</string>
    <string name="canceling_game">Canceling Game!</string>
    <string name="kicking_player">Kicking other player!</string>
    <string name="move_published">Move was published. Please wait for update or refresh manually!</string>
    <string name="tab_title_create">Create Game</string>
    <string name="tab_title_open">Existing Game</string>
    <string name="create_game">Create Game</string>
    <string name="creation_description_1">Creating a game will require 1 Ξ in addition to the normal transaction fees.</string>
    <string name="creation_description_2">Once a game has been created another player can join. For this it is again necessary to pay 1 Ξ</string>
    <string name="creation_description_3">The winner will receive 2 Ξ or in case of a Tie each player gets their 1 Ξ refunded.</string>
    <string name="joined_at">Joined at %s</string>
    <string name="published_at">Published at %s</string>
    <string name="processing_action">Processing action</string>
    <string name="copied_address_to_clipboard">Copied account address to clipboard!</string>
    <string name="clipboard_address_label">Solidity TicTacToe Account</string>
    <string name="copy_address_to_clipboard_error">Could not copy address to clipboard</string>
    <string name="x_ether">%s Ξ</string>
    <string name="x_wei">%s Wei</string>
    <string name="x_gwei">%s GWei</string>
    <string name="costs_loading">Costs: loading…</string>
    <string name="costs_estimate">Costs: ~%s</string>
    <string name="costs_error">Costs: error loading</string>
    <string name="costs_error_retry">Costs: error. Click to retry!</string>
    <string name="confirm">Confirm</string>
    <string name="estimate">Estimate</string>
    <string name="description_join">By confirming this transaction you will stake <b>1 Ξ</b> and join <b>Game %s</b> as Player 2. Your stake will be included in the displayed costs.</string>
    <string name="description_make_move">By confirming this transaction you will make your move on the <b>%s</b> field</string>
    <string name="description_cancel">By confirming this transaction you will cancel <b>Game %s</b>. Your stake of <b>1 Ξ</b> will be refunded.</string>
    <string name="description_kick">By confirming this transaction you will kick the other player from <b>Game %s</b> und you will be the winner.</string>
    <string name="top_left">top left</string>
    <string name="center_left">center left</string>
    <string name="top_center">top center</string>
    <string name="bottom_left">bottom left</string>
    <string name="bottom_center">bottom center</string>
    <string name="center">center</string>
    <string name="top_right">top right</string>
    <string name="bottom_right">bottom right</string>
    <string name="center_right">center right</string>
    <string name="unknown">unknown</string>
    <string name="cancel_game">Cancel Game</string>
    <string name="game_canceled">Game was canceled</string>
    <string name="kick_player">Kick other Player</string>
    <string name="kick_warning">You are too slow and might be kicked!</string>
    <string name="create_game_tutorial_title">How to create a Game!</string>
    <string name="create_game_tutorial_text_1">1. Setup an account (button in the bottom)</string>
    <string name="create_game_tutorial_text_2">2. Fund account (see balance on the top, click to copy address)</string>
    <string name="create_game_tutorial_text_3">3. Create a game (button in the bottom after account setup)</string>
    <string name="create_game_tutorial_text_4">4. Share Game Id with other Player (title of the entry after game has been created: e.g. 1 for Game 1)</string>
    <string name="timer">%d:%02d</string>
</resources>
