<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/creation_desc_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/creation_description_1" />

    <TextView
        android:id="@+id/creation_desc_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/creation_desc_1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/creation_description_2" />

    <TextView
        android:id="@+id/creation_desc_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/creation_desc_2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/creation_description_3" />

    <TextView
        android:id="@+id/layout_create_game_create_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/create_game"
        android:textColor="@android:color/white" />
</RelativeLayout>