<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/layout_unlock_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/layout_unlock_repeat_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_unlock_password_input"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/layout_unlock_unlock_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/unlock"
            android:textColor="@android:color/white"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>