<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/layout_confirm_transaction_description"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            tools:text="@string/description_join" />

        <TextView
            android:id="@+id/layout_confirm_transaction_confirm_button"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/layout_confirm_transaction_description"
            android:background="@drawable/selectable_background"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/confirm"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/layout_confirm_transaction_estimate_button"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/layout_confirm_transaction_description"
            android:layout_toLeftOf="@id/layout_confirm_transaction_confirm_button"
            android:layout_toStartOf="@id/layout_confirm_transaction_confirm_button"
            android:background="@drawable/selectable_background"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/estimate"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/layout_confirm_transaction_estimate"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_below="@id/layout_confirm_transaction_description"
            android:layout_toLeftOf="@id/layout_confirm_transaction_estimate_button"
            android:layout_toStartOf="@id/layout_confirm_transaction_estimate_button"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:text="@string/costs_loading"
            tools:text="Costs: ~1.00003 Ξ" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>