<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/layout_game_details_toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/layout_game_details_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="1dp">

                    <ImageView
                        android:id="@+id/layout_game_details_field_0"
                        android:layout_width="@dimen/game_field"
                        android:layout_height="@dimen/game_field"
                        android:layout_margin="1dp"
                        android:background="@android:color/darker_gray" />

                    <ImageView
                        android:id="@+id/layout_game_details_field_1"
                        android:layout_width="@dimen/game_field"
                        android:layout_height="@dimen/game_field"
                        android:layout_margin="1dp"
                        android:background="@android:color/darker_gray" />

                    <ImageView
                        android:id="@+id/layout_game_details_field_2"
                        android:layout_width="@dimen/game_field"
                        android:layout_height="@dimen/game_field"
                        android:layout_margin="1dp"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="1dp">

                    <ImageView
                        android:id="@+id/layout_game_details_field_3"
                        android:layout_width="@dimen/game_field"
                        android:layout_height="@dimen/game_field"
                        android:layout_margin="1dp"
                        android:background="@android:color/darker_gray" />

                    <ImageView
                        android:id="@+id/layout_game_details_field_4"
                        android:layout_width="@dimen/game_field"
                        android:layout_height="@dimen/game_field"
                        android:layout_margin="1dp"
                        android:background="@android:color/darker_gray"
                        android:tint="@color/pending_move"
                        tools:src="@drawable/ic_player_1" />

                    <ImageView
                        android:id="@+id/layout_game_details_field_5"
                        android:layout_width="@dimen/game_field"
                        android:layout_height="@dimen/game_field"
                        android:layout_margin="1dp"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="1dp">

                    <ImageView
                        android:id="@+id/layout_game_details_field_6"
                        android:layout_width="@dimen/game_field"
                        android:layout_height="@dimen/game_field"
                        android:layout_margin="1dp"
                        android:background="@android:color/darker_gray" />

                    <ImageView
                        android:id="@+id/layout_game_details_field_7"
                        android:layout_width="@dimen/game_field"
                        android:layout_height="@dimen/game_field"
                        android:layout_margin="1dp"
                        android:background="@android:color/darker_gray" />

                    <ImageView
                        android:id="@+id/layout_game_details_field_8"
                        android:layout_width="@dimen/game_field"
                        android:layout_height="@dimen/game_field"
                        android:layout_margin="1dp"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/layout_game_details_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="8dp"
                tools:text="State: waiting for player to join" />

            <TextView
                android:id="@+id/layout_game_details_last_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_game_details_state"
                android:layout_centerHorizontal="true"
                android:padding="8dp"
                tools:text="Last move made yesterday" />

            <TextView
                android:id="@+id/layout_game_details_player_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/layout_game_details_setup_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignWithParentIfMissing="true"
                android:padding="8dp"
                tools:text="@string/you_are_player_x" />

            <TextView
                android:id="@+id/layout_game_details_kick_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/layout_game_details_cancel_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_gravity="end"
                android:background="@drawable/selectable_background"
                android:padding="8dp"
                android:text="@string/kick_player"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/layout_game_details_kick_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/layout_game_details_cancel_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_gravity="end"
                android:padding="8dp"
                android:text="@string/kick_warning"
                android:textColor="@color/error"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/layout_game_details_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/layout_game_details_pending_actions"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_gravity="end"
                android:background="@drawable/selectable_background"
                android:padding="8dp"
                android:text="@string/cancel_game"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/layout_game_details_pending_actions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/layout_game_details_setup_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_toEndOf="@id/layout_game_details_player_info"
                android:layout_toRightOf="@id/layout_game_details_player_info"
                android:background="@drawable/selectable_background"
                android:gravity="end"
                android:padding="8dp"
                tools:text="@string/x_pending_actions" />

            <TextView
                android:id="@+id/layout_game_details_setup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/layout_game_details_join_button"
                android:layout_alignParentBottom="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/accent_selectable_background"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/setup_account_game"
                android:textColor="@android:color/white"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/layout_game_details_join_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/accent_selectable_background"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/join"
                android:textColor="@android:color/white"
                android:visibility="gone"
                tools:visibility="gone" />
        </RelativeLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.design.widget.CoordinatorLayout>